package com.yelixian.beiqi.service;

import com.yelixian.beiqi.dao.BeiqiDAO;
import com.yelixian.beiqi.proto.*;
import io.grpc.stub.StreamObserver;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;

@Component
public class RecommendServiceImpl extends RecommendGrpc.RecommendImplBase {
    private static final Logger logger = LoggerFactory.getLogger(RecommendServiceImpl.class);

    @Autowired
    private BeiqiDAO beiqiDAO;

    @Override
    public void mainRecommend(CommonRequest req, StreamObserver<RecommendVideoReply> responseObserver) {
        RecommendVideoReply reply = RecommendVideoReply.newBuilder()
                .addVideoList(0, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("eq341yex")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第一季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("recommendation")
                        .build())
                .addVideoList(1, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("y71yrh5e")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第二季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("recommendation")
                        .build())
                .addVideoList(2, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("x3rtewwp")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第三季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("cartoon")
                        .build())
                .addVideoList(3, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ioren7nf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第四季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("cartoon")
                        .build())
                .addVideoList(4, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("tyiu3daf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第五季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("discovery")
                        .build())
                .addVideoList(5, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("mmew3f0p")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第六季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("discovery")
                        .build())
                .addVideoList(6, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("poda47nc")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第七季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("show")
                        .build())
                .addVideoList(7, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ipds5dsz")
                        .setVcode("d9or00os")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之王者风范")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("show")
                        .setDuration(5271)
                        .setHeadDuration(67)
                        .setTailDuration(228)
                        .build())
                .addVideoList(8, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ds23fy6d")
                        .setVcode("hg8jk6ba")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之乘风破浪")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("education")
                        .setDuration(5482)
                        .setHeadDuration(80)
                        .setTailDuration(235)
                        .build())
                .addVideoList(9, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("nn5tdypc")
                        .setVcode("dsdad70p")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之科学怪人")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("education")
                        .setDuration(5573)
                        .setHeadDuration(75)
                        .setTailDuration(231)
                        .build())
                .setErrCode(0)
                .setErrMessage("")
                .build();
        responseObserver.onNext(reply);
        responseObserver.onCompleted();
    }

    @Override
    public void hotVideoRecommend(KeywordRequest req, StreamObserver<RecommendVideoReply> responseObserver) {
        RecommendVideoReply reply = RecommendVideoReply.newBuilder()
                .addVideoList(0, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("eq341yex")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第一季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("recommendation")
                        .build())
                .addVideoList(1, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("y71yrh5e")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第二季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("recommendation")
                        .build())
                .addVideoList(2, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("x3rtewwp")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第三季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("cartoon")
                        .build())
                .addVideoList(3, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ioren7nf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第四季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("cartoon")
                        .build())
                .addVideoList(4, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("tyiu3daf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第五季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("discovery")
                        .build())
                .addVideoList(5, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ipds5dsz")
                        .setVcode("d9or00os")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之王者风范")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("show")
                        .setDuration(5271)
                        .setHeadDuration(67)
                        .setTailDuration(228)
                        .build())
                .addVideoList(6, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ds23fy6d")
                        .setVcode("hg8jk6ba")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之乘风破浪")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("education")
                        .setDuration(5482)
                        .setHeadDuration(80)
                        .setTailDuration(235)
                        .build())
                .addVideoList(7, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("nn5tdypc")
                        .setVcode("dsdad70p")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之科学怪人")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setType("education")
                        .setDuration(5573)
                        .setHeadDuration(75)
                        .setTailDuration(231)
                        .build())
                .setErrCode(0)
                .setErrMessage("")
                .build();
        responseObserver.onNext(reply);
        responseObserver.onCompleted();
    }

    @Override
    public void relatedVideoRecommend(VideoRequest req, StreamObserver<RecommendVideoReply> responseObserver) {
        RecommendVideoReply reply = RecommendVideoReply.newBuilder()
                .addVideoList(0, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.CHANNEL)
                        .setTitle("小猪佩奇")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .build())
                .addVideoList(1, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("x3rtewwp")
                        .setVcode("tvv7unts")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇 第三季 第12集")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setDuration(458)
                        .setHeadDuration(72)
                        .setTailDuration(55)
                        .build())
                .addVideoList(2, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ioren7nf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第四季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .build())
                .addVideoList(3, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("tyiu3daf")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第五季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .build())
                .addVideoList(4, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("poda47nc")
                        .setVcode("")
                        .setVideoLabel(VideoLabel.EPISODE)
                        .setTitle("小猪佩奇 第七季")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .build())
                .addVideoList(5, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ipds5dsz")
                        .setVcode("d9or00os")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之王者风范")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setDuration(5271)
                        .setHeadDuration(67)
                        .setTailDuration(228)
                        .build())
                .addVideoList(6, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("ds23fy6d")
                        .setVcode("hg8jk6ba")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之乘风破浪")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setDuration(5482)
                        .setHeadDuration(80)
                        .setTailDuration(235)
                        .build())
                .addVideoList(7, Video.newBuilder()
                        .setCcode("ux4y72sg")
                        .setEcode("nn5tdypc")
                        .setVcode("dsdad70p")
                        .setVideoLabel(VideoLabel.VIDEO)
                        .setTitle("小猪佩奇大电影之科学怪人")
                        .setPicUrl("http://cdn.donghuaxsp.com/wp-content/uploads/2018/01/beepress-image-2-4-2-5287-1515769768-1.jpeg")
                        .setDuration(5573)
                        .setHeadDuration(75)
                        .setTailDuration(231)
                        .build())
                .setErrCode(0)
                .setErrMessage("")
                .build();
        responseObserver.onNext(reply);
        responseObserver.onCompleted();
    }

    @Override
    public void keywordRecommend(CommonRequest req, StreamObserver<HotKeywordReply> responseObserver) {
        HotKeywordReply reply = HotKeywordReply.newBuilder()
                .addKeywordList(0, Keyword.newBuilder().setKeyword("小猪佩奇").setResultNum(9).build())
                .addKeywordList(1, Keyword.newBuilder().setKeyword("汪汪队立大功").setResultNum(5).build())
                .addKeywordList(2, Keyword.newBuilder().setKeyword("熊出没").setResultNum(23).build())
                .addKeywordList(3, Keyword.newBuilder().setKeyword("小马宝莉").setResultNum(8).build())
                .addKeywordList(4, Keyword.newBuilder().setKeyword("海绵宝宝").setResultNum(15).build())
                .addKeywordList(5, Keyword.newBuilder().setKeyword("赛车总动员").setResultNum(2).build())
                .addKeywordList(6, Keyword.newBuilder().setKeyword("超级飞侠").setResultNum(6).build())
                .addKeywordList(7, Keyword.newBuilder().setKeyword("大头儿子小头爸爸").setResultNum(16).build())
                .addKeywordList(8, Keyword.newBuilder().setKeyword("海底小纵队").setResultNum(6).build())
                .addKeywordList(9, Keyword.newBuilder().setKeyword("爸爸去哪儿").setResultNum(13).build())
                .setErrCode(0)
                .setErrMessage("")
                .build();
        responseObserver.onNext(reply);
        responseObserver.onCompleted();
    }
}
